// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 emotion-2 emotion-0 emotion-1"
  role="button"
  tabindex="0"
  type="button"
>
  Toggle
</div>
`;

exports[`composition hook should return with Overlay.Disclosure props 1`] = `
Object {
  "aria-controls": "test",
  "aria-disabled": undefined,
  "aria-expanded": false,
  "aria-haspopup": "dialog",
  "className": "css-13h683e css-13h683e css-1pwrqjj css-1ccgglo",
  "disabled": undefined,
  "onClick": [Function],
  "onKeyDown": [Function],
  "onMouseDown": [Function],
  "onMouseOver": [Function],
  "ref": [Function],
  "role": "button",
  "tabIndex": 0,
  "type": "button",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-0 emotion-2 emotion-3"
  role="button"
  tabindex="0"
  type="button"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-0 emotion-2 emotion-3 red"
  tabindex="0"
  type="button"
>
  Toggle
</button>
`;

exports[`overrides Overlay.Disclosure.base should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: red;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 emotion-3"
  tabindex="0"
  type="button"
>
  Toggle
</button>
`;

exports[`props should assign a ref 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-0 emotion-2 emotion-3"
  tabindex="0"
  type="button"
>
  Toggle
</button>
`;

exports[`props should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-0 emotion-2 emotion-3"
  tabindex="0"
  type="button"
>
  Toggle
</button>
`;

exports[`props should render correctly when disabled is set 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-disabled="true"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-0 emotion-2 emotion-3"
  disabled=""
  type="button"
>
  Toggle
</button>
`;

exports[`props should render correctly when focusable is set 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-disabled="true"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-0 emotion-2 emotion-3"
  tabindex="0"
  type="button"
>
  Toggle
</button>
`;

exports[`theming Overlay.Disclosure.base should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: red;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 emotion-3"
  tabindex="0"
  type="button"
>
  Toggle
</button>
`;
